# rayfork-sokol-template

./: CMakeLists.txt  README.md
libs/rayfork/: CMakeLists.txt
src/: platform.c
